--- a/templates/application/display-block/block-list/layout.html.twig
+++ b/templates/application/display-block/block-list/layout.html.twig
@@ -9,7 +9,7 @@
     {% if oUIBlock.bCreateNew %}
         <p>
             <a{{ oUIBlock.sLinkTarget }} href="{{ oUIBlock.sAbsoluteUrlAppRoot }}pages/UI.php?operation=new&class={{ oUIBlock.sClass }}&{{ oUIBlock.sParams }}{{ oUIBlock.sDefault }}">
-                {{ 'UI:ClickToCreateNew'|dict_format(oUIBlock.sClassName) }}
+                {{ 'UI:ClickToCreateNew'|dict_format(oUIBlock.sClassLabel) }}
             </a>
         </p>
     {% endif %}
