N°2847 - Alert: Fix layout when either title or body is empty

--- a/templates/base/components/alert/layout.html.twig
+++ b/templates/base/components/alert/layout.html.twig
@@ -13,8 +13,12 @@
 			<i class="fas fa-times"></i>
 		</div>
 	{% endif %}
-	<div class="ibo-alert--title"
-	     {% if oUIBlock.IsCollapsible() %}data-role="ibo-alert--collapse-toggler"{% endif %}
-	>{{ oUIBlock.GetTitle() }}</div>
-	<div class="ibo-alert--body">{{ oUIBlock.GetContent()|raw }}</div>
+	{% if oUIBlock.GetTitle() is not empty %}
+		<div class="ibo-alert--title"
+		     {% if oUIBlock.IsCollapsible() %}data-role="ibo-alert--collapse-toggler"{% endif %}
+		>{{ oUIBlock.GetTitle() }}</div>
+	{% endif %}
+	{% if oUIBlock.GetContent() is not empty %}
+		<div class="ibo-alert--body">{{ oUIBlock.GetContent()|raw }}</div>
+	{% endif %}
 </div>
