--- a/css/backoffice/components/_alert.scss
+++ b/css/backoffice/components/_alert.scss
@@ -24,10 +24,10 @@ $ibo-alert--padding-x: 20px !default;
 $ibo-alert--min-height: 30px !default;
 $ibo-alert--border-radius: $ibo-border-radius-300 !default;
 
-$ibo-alert--title--padding-bottom: 4px !default;
-
 $ibo-alert--title--highlight--width: 4px !default;
 $ibo-alert--title--highlight--height: 100% !default;
+
+$ibo-alert--body--margin-top: 4px !default;
 
 $ibo-alert-minimized--padding-y: 5px !default;
 $ibo-alert-minimized--title--padding-bottom: 0px !default;
@@ -91,7 +91,6 @@ $ibo-alert-colors: (
 	}
 	
 	.ibo-alert--title {
-		padding-bottom: $ibo-alert--title--padding-bottom;
 		cursor: pointer;
 
 		@extend %ibo-font-ral-bol-150;
@@ -122,6 +121,9 @@ $ibo-alert-colors: (
 		}
 	}
 
+}
+.ibo-alert--title + .ibo-alert--body {
+	margin-top: $ibo-alert--body--margin-top;
 }
 
 /* Spacing between alert blocks */
