N°3564 Alert and CollapsibleSectionState can now be saved

--- a/templates/base/components/alert/layout.js.twig
+++ b/templates/base/components/alert/layout.js.twig
@@ -1,1 +1,7 @@
 $('#{{ oUIBlock.GetId() }}').alert();
+{% if oUIBlock.IsSaveCollapsibleStateEnabled() %}
+$('#{{ oUIBlock.GetId() }}').alert("instance").enableSaveCollapsibleState(
+		{{ oUIBlock.IsOpenedByDefault() }},
+		'{{ oUIBlock.GetSessionCollapsibleStateStorageKey() }}'
+);
+{% endif %}
