N°2677 - Add style definition for enums (Fix list display)

--- a/css/backoffice/components/_field-badge.scss
+++ b/css/backoffice/components/_field-badge.scss
@@ -13,5 +13,5 @@ $ibo-field-badge--border-radius: $ibo-border-radius-300 !default;
   margin: $ibo-field-badge--margin;
   padding: $ibo-field-badge--padding;
   border-radius: $ibo-field-badge--border-radius;
-  display: inline-block;
+  display: inline;
 }
