--- a/css/light-grey.scss
+++ b/css/light-grey.scss
@@ -3885,7 +3885,7 @@
 
 	// - Edit is always styled like the selectize items, see below.
 	%attribute-set-item-edition {
-		display: inline-block;
+		display: inline;
 		margin-right: 3px;
 		margin-bottom: 3px;
 		padding: 4px 6px;
