--- a/css/backoffice/themes/page-banner.scss
+++ b/css/backoffice/themes/page-banner.scss
@@ -17,18 +17,18 @@
  *  * You should have received a copy of the GNU Affero General Public License
  *  
  */
-$backoffice-environment-banner-background-color: #C53030 !default;
-$backoffice-environment-banner-text-color: #F7FAFC !default;
-$backoffice-environment-banner-text-content: "THIS IS NOT PRODUCTION INSTANCE" !default;
+$ibo-page-banner-background-color: $ibo-color-red-600 !default;
+$ibo-page-banner-text-color: $ibo-color-red-100 !default;
+$ibo-page-banner-text-content: "THIS IS NOT PRODUCTION INSTANCE" !default;
 
 
-div#top-bar::before {
+#ibo-page-banner::before {
   display: block;
   width: 100%;
   padding: 0.2rem;
   text-align: center;
   font-size: 1rem;
-  background: $backoffice-environment-banner-background-color;
-  color: $backoffice-environment-banner-text-color;
-  content: $backoffice-environment-banner-text-content;
+  background: $ibo-page-banner-background-color;
+  color: $ibo-page-banner-text-color;
+  content: $ibo-page-banner-text-content;
 }
