N°3617 collapsible components state saving : use JQuery widget options instead of a method This is the way JQuery widget are intended to work ! Thanks @Molkobain for the review !

--- a/templates/base/components/collapsible-section/layout.js.twig
+++ b/templates/base/components/collapsible-section/layout.js.twig
@@ -1,7 +1,4 @@
-$('#{{ oUIBlock.GetId() }}').collapsibleSection();
-{% if oUIBlock.IsSaveCollapsibleStateEnabled() %}
-$('#{{ oUIBlock.GetId() }}').collapsibleSection("instance").enableSaveCollapsibleState(
-		{{ oUIBlock.IsOpenedByDefault()|var_export }},
-		'{{ oUIBlock.GetSessionCollapsibleStateStorageKey() }}'
-);
-{% endif %}
+$('#{{ oUIBlock.GetId() }}').collapsibleSection({
+	bOpenedByDefault: {{ oUIBlock.IsOpenedByDefault()|var_export }}
+	{% if oUIBlock.IsSaveCollapsibleStateEnabled() %}, collapsibleStateStorageKey: '{{ oUIBlock.GetSessionCollapsibleStateStorageKey() }}'{% endif %}
+});
