--- a/templates/base/components/alert/layout.js.twig
+++ b/templates/base/components/alert/layout.js.twig
@@ -1,7 +1,4 @@
-$('#{{ oUIBlock.GetId() }}').alert();
-{% if oUIBlock.IsSaveCollapsibleStateEnabled() %}
-$('#{{ oUIBlock.GetId() }}').alert("instance").enableSaveCollapsibleState(
-		{{ oUIBlock.IsOpenedByDefault() }},
-		'{{ oUIBlock.GetSessionCollapsibleStateStorageKey() }}'
-);
-{% endif %}
+$('#{{ oUIBlock.GetId() }}').alert({
+	bOpenedByDefault: {{ oUIBlock.IsOpenedByDefault()|var_export }}
+	{% if oUIBlock.IsSaveCollapsibleStateEnabled() %}, collapsibleStateStorageKey: '{{ oUIBlock.GetSessionCollapsibleStateStorageKey() }}'{% endif %}
+});
