N°3620 - Add confg. parameter to disable "quick create" history

--- a/templates/base/components/quick-create/layout.html.twig
+++ b/templates/base/components/quick-create/layout.html.twig
@@ -20,7 +20,11 @@
 				<span>{{ 'UI:Component:QuickCreate:Recents:Title'|dict_s }}</span>
 			</div>
 			<div class="ibo-quick-create--compartment-content" data-role="ibo-quick-create--compartment-content">
-				{% if oUIBlock.GetLastClasses()|length > 0 %}
+				{% if oUIBlock.GetShowHistory == false %}
+					<div class="ibo-quick-create--compartment--placeholder">
+						<div class="ibo-quick-create--compartment--placeholder-hint">{{ 'UI:Component:QuickCreate:HistoryDisabled'|dict_s }}</div>
+					</div>
+				{% elseif oUIBlock.GetLastClasses()|length > 0 %}
 					{% for aClass in oUIBlock.GetLastClasses() %}
 						<a href="{{ aClass.target_url }}" class="ibo-quick-create--compartment-element" data-role="ibo-quick-create--compartment-element" data-class-code="{{ aQuery.class }}">
 							{% if aClass.icon_url is defined %}
