--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
@@ -1,121 +1,165 @@
 {# @copyright   Copyright (C) 2010-2019 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
-{% UIBlock Combodo\iTop\Application\UI\Base\Component\Html\Html %}
+{% apply spaceless %}
+
+{% UIContentBlock "" "ibo-update-core" %}
+{% UIHtml %}
     <div class="page_header"><h1 class="ibo-title--text title is-size-3">{{ 'iTopUpdate:UI:PageTitle'|dict_s }}</h1></div>
-{% EndUIBlock %}
-{# <div class="ibo-v-spacer">&nbsp;</div> #}
+{% EndUIHtml %}
+{% UIHtml %}
+    <div class="ibo-v-spacer">&nbsp;</div>
+{% EndUIHtml %}
 
-{# <div class="display_block display-files"> #}
-{# <fieldset class="ibo-fieldset"> #}
-{# <legend class="ibo-fieldset-legend">{{ 'iTopUpdate:UI:Status'|dict_s }}</legend> #}
+{% UIContentBlock "" "display_block display-files" %}
+{% UIFieldSet {'legend':'iTopUpdate:UI:Status'|dict_s} %}
 
-{# <div id="header-requirements" class="ibo-alert ibo-is-information ibo-is-opened"> #}
-{# <div class="ibo-alert--body"> #}
-{# <span id="can-core-update">{{ 'iTopUpdate:UI:CanCoreUpdate:Loading'|dict_s }}  <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></span> #}
-{# </div> #}
-{# </div> #}
+{% UIHtml %}
+    <div id="header-requirements" class="ibo-alert ibo-is-information ibo-is-opened">
+        <div class="ibo-alert--body">
+            <span id="can-core-update">{{ 'iTopUpdate:UI:CanCoreUpdate:Loading'|dict_s }}  <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></span>
+        </div>
+    </div>
+{% EndUIHtml %}
 
-{# {{ include('DisplayCurrentVersion.html.twig') }} #}
+    {% set sVersion = 'UI:iTopVersion:Long'|dict_format(constant('ITOP_APPLICATION'), constant('ITOP_VERSION'), constant('ITOP_REVISION'), constant('ITOP_BUILD_DATE')) %}
 
-{# <div class="ibo-field ibo-field-small" data-role="ibo-field"> #}
-{# <div class="ibo-field--label"><span title="">{{ 'iTopUpdate:UI:DiskFreeSpace'|dict_s }}</span></div> #}
-{# <div class="ibo-field--value"> #}
-{# <div class="field_value">{{ sDiskFreeSpace }}</div> #}
-{# </div> #}
-{# </div> #}
+{% UIField Small {'label':'iTopUpdate:UI:CurrentVersion'|dict_s} %}
+    {{ sVersion }}
+{% EndUIField %}
+{% UIField Small {'label':'iTopUpdate:UI:DiskFreeSpace'|dict_s} %}
+    {{ sDiskFreeSpace }}
+{% EndUIField %}
+{% UIField Small {'label':'iTopUpdate:UI:ItopDiskSpace'|dict_s, 'value_id':'itop-disk-space'} %}
+    <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i>
+{% EndUIField %}
+{% UIField Small {'label':'iTopUpdate:UI:DBDiskSpace'|dict_s, 'value_id':'db-disk-space'} %}
+    <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i>
+{% EndUIField %}
+{% UIField Small {'label':'iTopUpdate:UI:FileUploadMaxSize'|dict_s} %}
+    {{ sFileUploadMaxSize }}
+{% EndUIField %}
 
-{# <div class="ibo-field ibo-field-small" data-role="ibo-field"> #}
-{# <div class="ibo-field--label"><span title="">{{ 'iTopUpdate:UI:ItopDiskSpace'|dict_s }}</span></div> #}
-{# <div class="ibo-field--value"> #}
-{# <div id="itop-disk-space" class="field_value"><i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></div> #}
-{# </div> #}
-{# </div> #}
+{% EndUIFieldSet %}
+{% EndUIContentBlock %}
 
-{# <div class="ibo-field ibo-field-small" data-role="ibo-field"> #}
-{# <div class="ibo-field--label"><span title="">{{ 'iTopUpdate:UI:DBDiskSpace'|dict_s }}</span></div> #}
-{# <div id="db-disk-space" class="ibo-field--value"><i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></div> #}
-{# </div> #}
+{% EndUIContentBlock %}
 
-{# <div class="ibo-field ibo-field-small" data-role="ibo-field"> #}
-{# <div class="ibo-field--label"><span title="">{{ 'iTopUpdate:UI:FileUploadMaxSize'|dict_s }}</span></div> #}
-{# <div class="ibo-field--value">{{ sFileUploadMaxSize }}</div> #}
-{# </div> #}
+    {# <div class="page_header"><h1 class="ibo-title--text title is-size-3">{{ 'iTopUpdate:UI:PageTitle'|dict_s }}</h1></div> #}
 
-{# </fieldset> #}
+    {# <div class="ibo-v-spacer">&nbsp;</div> #}
 
-{# <fieldset class="ibo-fieldset"> #}
-{# <legend class="ibo-fieldset-legend">{{ 'iTopUpdate:UI:SelectUpdateFile'|dict_s }}</legend> #}
+    {# <div class="display_block display-files"> #}
+    {# <fieldset class="ibo-fieldset"> #}
+    {# <legend class="ibo-fieldset-legend">{{ 'iTopUpdate:UI:Status'|dict_s }}</legend> #}
 
-{# <form enctype="multipart/form-data" method="post"> #}
-{# <input type="hidden" name="operation" value="ConfirmUpdate"/> #}
-{# <input type="hidden" name="transaction_id" value="{{ sTransactionId }}"> #}
+    {# <div id="header-requirements" class="ibo-alert ibo-is-information ibo-is-opened"> #}
+    {# <div class="ibo-alert--body"> #}
+    {# <span id="can-core-update">{{ 'iTopUpdate:UI:CanCoreUpdate:Loading'|dict_s }}  <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></span> #}
+    {# </div> #}
+    {# </div> #}
 
-{# <div id="header-file-size" class="header_message message_error" style="display: none"> #}
-{# <div> #}
-{# <span>{{ 'iTopUpdate:Error:FileUploadMaxSizeTooSmall'|dict_s }}</span> #}
-{# </div> #}
-{# <div> #}
-{# <span>{{ 'iTopUpdate:UI:PostMaxSize'|dict_format(sPostMaxSize) }}</span> #}
-{# </div> #}
-{# <div> #}
-{# <span>{{ 'iTopUpdate:UI:UploadMaxFileSize'|dict_format(sUploadMaxSize) }}</span> #}
-{# </div> #}
-{# </div> #}
+    {# {{ include('DisplayCurrentVersion.html.twig') }} #}
 
-{# <div class="field_container field_large"> #}
-{# <div class="field_data"> #}
-{# <div class="upload_container"> #}
-{# <input type="file" id="file" name="file"/> #}
-{# </div> #}
-{# </div> #}
+    {# <div class="ibo-field ibo-field-small" data-role="ibo-field"> #}
+    {# <div class="ibo-field--label"><span title="">{{ 'iTopUpdate:UI:DiskFreeSpace'|dict_s }}</span></div> #}
+    {# <div class="ibo-field--value"> #}
+    {# <div class="field_value">{{ sDiskFreeSpace }}</div> #}
+    {# </div> #}
+    {# </div> #}
 
-{# <div id="dobackup-warning" class="header_message message_info" style="display: none">{{ 'iTopUpdate:UI:DoBackup:Warning'|dict_s }}</div> #}
-{# <div class="field_data"> #}
-{# <label id="dobackup-label" for="doBackup">{{ 'iTopUpdate:UI:DoBackup:Label'|dict_s }}</label> #}
-{# <input type="checkbox" id="doBackup" name="doBackup" checked="checked" value="1"/> #}
-{# </div> #}
-{# <div class="field_data"> #}
-{# <label id="dofilesarchive-label" for="doFilesArchive">{{ 'iTopUpdate:UI:DoFilesArchive'|dict_s }}</label> #}
-{# <input type="checkbox" id="doFilesArchive" name="doFilesArchive" checked="checked" value="1"/> #}
-{# </div> #}
-{# </div> #}
-{# <p><input id="check-update" type="submit" value="{{ 'iTopUpdate:UI:CheckUpdate'|dict_s }}" disabled="disabled"/> <i id="submit-wait" style="display: none" class="fas fa-spinner fa-spin" aria-hidden="true"></i></p> #}
-{# </form> #}
-{# </fieldset> #}
+    {# <div class="ibo-field ibo-field-small" data-role="ibo-field"> #}
+    {# <div class="ibo-field--label"><span title="">{{ 'iTopUpdate:UI:ItopDiskSpace'|dict_s }}</span></div> #}
+    {# <div class="ibo-field--value"> #}
+    {# <div id="itop-disk-space" class="field_value"><i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></div> #}
+    {# </div> #}
+    {# </div> #}
 
-{# <fieldset class="ibo-fieldset"> #}
-{# <legend class="ibo-fieldset-legend">{{ 'iTopUpdate:UI:History'|dict_s }}</legend> #}
+    {# <div class="ibo-field ibo-field-small" data-role="ibo-field"> #}
+    {# <div class="ibo-field--label"><span title="">{{ 'iTopUpdate:UI:DBDiskSpace'|dict_s }}</span></div> #}
+    {# <div id="db-disk-space" class="ibo-field--value"><i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></div> #}
+    {# </div> #}
 
-{# <div class="details"> #}
-{# {% for aInstall in aPreviousInstall %} #}
-{# {% if loop.first %} #}
-{# <table class="listResults ibo-datatable"> #}
-{# <tr> #}
-{# <th>{{ 'Class:ModuleInstallation/Attribute:name'|dict_s }}</th> #}
-{# <th>{{ 'Class:ModuleInstallation/Attribute:version'|dict_s }}</th> #}
-{# <th>{{ 'Class:ModuleInstallation/Attribute:installed'|dict_s }}</th> #}
-{# <th>{{ 'Class:ModuleInstallation/Attribute:comment'|dict_s }}</th> #}
-{# </tr> #}
-{# {% endif %} #}
+    {# <div class="ibo-field ibo-field-small" data-role="ibo-field"> #}
+    {# <div class="ibo-field--label"><span title="">{{ 'iTopUpdate:UI:FileUploadMaxSize'|dict_s }}</span></div> #}
+    {# <div class="ibo-field--value">{{ sFileUploadMaxSize }}</div> #}
+    {# </div> #}
 
-{# {% if (loop.index0 % 2) == 0 %} #}
-{# {% set sRowClass = "odd" %} #}
-{# {% else %} #}
-{# {% set sRowClass = "even" %} #}
-{# {% endif %} #}
+    {# </fieldset> #}
 
-{# <tr class="{{ sRowClass }}"> #}
-{# <td>{{ aInstall.name }}</td> #}
-{# <td>{{ aInstall.version }}</td> #}
-{# <td>{{ aInstall.installed }}</td> #}
-{# <td>{{ aInstall.comment }}</td> #}
-{# </tr> #}
+    {# <fieldset class="ibo-fieldset"> #}
+    {# <legend class="ibo-fieldset-legend">{{ 'iTopUpdate:UI:SelectUpdateFile'|dict_s }}</legend> #}
 
-{# {% if loop.last %} #}
-{# </table> #}
-{# {% endif %} #}
-{# {% endfor %} #}
-{# </div> #}
-{# </fieldset> #}
+    {# <form enctype="multipart/form-data" method="post"> #}
+    {# <input type="hidden" name="operation" value="ConfirmUpdate"/> #}
+    {# <input type="hidden" name="transaction_id" value="{{ sTransactionId }}"> #}
 
-{# </div>    #}
+    {# <div id="header-file-size" class="header_message message_error" style="display: none"> #}
+    {# <div> #}
+    {# <span>{{ 'iTopUpdate:Error:FileUploadMaxSizeTooSmall'|dict_s }}</span> #}
+    {# </div> #}
+    {# <div> #}
+    {# <span>{{ 'iTopUpdate:UI:PostMaxSize'|dict_format(sPostMaxSize) }}</span> #}
+    {# </div> #}
+    {# <div> #}
+    {# <span>{{ 'iTopUpdate:UI:UploadMaxFileSize'|dict_format(sUploadMaxSize) }}</span> #}
+    {# </div> #}
+    {# </div> #}
+
+    {# <div class="field_container field_large"> #}
+    {# <div class="field_data"> #}
+    {# <div class="upload_container"> #}
+    {# <input type="file" id="file" name="file"/> #}
+    {# </div> #}
+    {# </div> #}
+
+    {# <div id="dobackup-warning" class="header_message message_info" style="display: none">{{ 'iTopUpdate:UI:DoBackup:Warning'|dict_s }}</div> #}
+    {# <div class="field_data"> #}
+    {# <label id="dobackup-label" for="doBackup">{{ 'iTopUpdate:UI:DoBackup:Label'|dict_s }}</label> #}
+    {# <input type="checkbox" id="doBackup" name="doBackup" checked="checked" value="1"/> #}
+    {# </div> #}
+    {# <div class="field_data"> #}
+    {# <label id="dofilesarchive-label" for="doFilesArchive">{{ 'iTopUpdate:UI:DoFilesArchive'|dict_s }}</label> #}
+    {# <input type="checkbox" id="doFilesArchive" name="doFilesArchive" checked="checked" value="1"/> #}
+    {# </div> #}
+    {# </div> #}
+    {# <p><input id="check-update" type="submit" value="{{ 'iTopUpdate:UI:CheckUpdate'|dict_s }}" disabled="disabled"/> <i id="submit-wait" style="display: none" class="fas fa-spinner fa-spin" aria-hidden="true"></i></p> #}
+    {# </form> #}
+    {# </fieldset> #}
+
+    {# <fieldset class="ibo-fieldset"> #}
+    {# <legend class="ibo-fieldset-legend">{{ 'iTopUpdate:UI:History'|dict_s }}</legend> #}
+
+    {# <div class="details"> #}
+    {# {% for aInstall in aPreviousInstall %} #}
+    {# {% if loop.first %} #}
+    {# <table class="listResults ibo-datatable"> #}
+    {# <tr> #}
+    {# <th>{{ 'Class:ModuleInstallation/Attribute:name'|dict_s }}</th> #}
+    {# <th>{{ 'Class:ModuleInstallation/Attribute:version'|dict_s }}</th> #}
+    {# <th>{{ 'Class:ModuleInstallation/Attribute:installed'|dict_s }}</th> #}
+    {# <th>{{ 'Class:ModuleInstallation/Attribute:comment'|dict_s }}</th> #}
+    {# </tr> #}
+    {# {% endif %} #}
+
+    {# {% if (loop.index0 % 2) == 0 %} #}
+    {# {% set sRowClass = "odd" %} #}
+    {# {% else %} #}
+    {# {% set sRowClass = "even" %} #}
+    {# {% endif %} #}
+
+    {# <tr class="{{ sRowClass }}"> #}
+    {# <td>{{ aInstall.name }}</td> #}
+    {# <td>{{ aInstall.version }}</td> #}
+    {# <td>{{ aInstall.installed }}</td> #}
+    {# <td>{{ aInstall.comment }}</td> #}
+    {# </tr> #}
+
+    {# {% if loop.last %} #}
+    {# </table> #}
+    {# {% endif %} #}
+    {# {% endfor %} #}
+    {# </div> #}
+    {# </fieldset> #}
+
+    {# </div> #}
+{% endapply %}
