--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
@@ -2,7 +2,7 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
 
-{% UIContentBlock "" "ibo-update-core" %}
+{% UIContentBlock {'container_class':'ibo-update-core'} %}
 
 {% UITitle ForPage {'title':'iTopUpdate:UI:PageTitle'|dict_s} %}
 
@@ -10,7 +10,7 @@
     <div class="ibo-v-spacer">&nbsp;</div>
 {% EndUIHtml %}
 
-{% UIContentBlock "" "display_block display-files" %}
+{% UIContentBlock {'container_class':'display_block display-files'} %}
 {% UIFieldSet {'legend':'iTopUpdate:UI:Status'|dict_s} %}
 
 {% UIAlert ForInformation {'title':'', 'id':'header-requirements'} %}
@@ -37,6 +37,83 @@
 
 {% EndUIFieldSet %}
 {% EndUIContentBlock %}
+
+{% UIContentBlock {'container_class':'display_block display-files'} %}
+{% UIFieldSet {'legend':'iTopUpdate:UI:SelectUpdateFile'|dict_s} %}
+    {# <form enctype="multipart/form-data" method="post"> #}
+    {# <input type="hidden" name="operation" value="ConfirmUpdate"/> #}
+    {# <input type="hidden" name="transaction_id" value="{{ sTransactionId }}"> #}
+
+    {# <div id="header-file-size" class="header_message message_error" style="display: none"> #}
+    {# <div> #}
+    {# <span>{{ 'iTopUpdate:Error:FileUploadMaxSizeTooSmall'|dict_s }}</span> #}
+    {# </div> #}
+    {# <div> #}
+    {# <span>{{ 'iTopUpdate:UI:PostMaxSize'|dict_format(sPostMaxSize) }}</span> #}
+    {# </div> #}
+    {# <div> #}
+    {# <span>{{ 'iTopUpdate:UI:UploadMaxFileSize'|dict_format(sUploadMaxSize) }}</span> #}
+    {# </div> #}
+    {# </div> #}
+
+    {# <div class="field_container field_large"> #}
+    {# <div class="field_data"> #}
+    {# <div class="upload_container"> #}
+    {# <input type="file" id="file" name="file"/> #}
+    {# </div> #}
+    {# </div> #}
+
+    {# <div id="dobackup-warning" class="header_message message_info" style="display: none">{{ 'iTopUpdate:UI:DoBackup:Warning'|dict_s }}</div> #}
+    {# <div class="field_data"> #}
+    {# <label id="dobackup-label" for="doBackup">{{ 'iTopUpdate:UI:DoBackup:Label'|dict_s }}</label> #}
+    {# <input type="checkbox" id="doBackup" name="doBackup" checked="checked" value="1"/> #}
+    {# </div> #}
+    {# <div class="field_data"> #}
+    {# <label id="dofilesarchive-label" for="doFilesArchive">{{ 'iTopUpdate:UI:DoFilesArchive'|dict_s }}</label> #}
+    {# <input type="checkbox" id="doFilesArchive" name="doFilesArchive" checked="checked" value="1"/> #}
+    {# </div> #}
+    {# </div> #}
+    {# <p><input id="check-update" type="submit" value="{{ 'iTopUpdate:UI:CheckUpdate'|dict_s }}" disabled="disabled"/> <i id="submit-wait" style="display: none" class="fas fa-spinner fa-spin" aria-hidden="true"></i></p> #}
+    {# </form> #}
+{% EndUIFieldSet %}
+{% EndUIContentBlock %}
+
+
+{% UIContentBlock {'container_class':'display_block display-files'} %}
+{% UIFieldSet {'legend':'iTopUpdate:UI:History'|dict_s} %}
+    {# <div class="details"> #}
+    {# {% for aInstall in aPreviousInstall %} #}
+    {# {% if loop.first %} #}
+    {# <table class="listResults ibo-datatable"> #}
+    {# <tr> #}
+    {# <th>{{ 'Class:ModuleInstallation/Attribute:name'|dict_s }}</th> #}
+    {# <th>{{ 'Class:ModuleInstallation/Attribute:version'|dict_s }}</th> #}
+    {# <th>{{ 'Class:ModuleInstallation/Attribute:installed'|dict_s }}</th> #}
+    {# <th>{{ 'Class:ModuleInstallation/Attribute:comment'|dict_s }}</th> #}
+    {# </tr> #}
+    {# {% endif %} #}
+
+    {# {% if (loop.index0 % 2) == 0 %} #}
+    {# {% set sRowClass = "odd" %} #}
+    {# {% else %} #}
+    {# {% set sRowClass = "even" %} #}
+    {# {% endif %} #}
+
+    {# <tr class="{{ sRowClass }}"> #}
+    {# <td>{{ aInstall.name }}</td> #}
+    {# <td>{{ aInstall.version }}</td> #}
+    {# <td>{{ aInstall.installed }}</td> #}
+    {# <td>{{ aInstall.comment }}</td> #}
+    {# </tr> #}
+
+    {# {% if loop.last %} #}
+    {# </table> #}
+    {# {% endif %} #}
+    {# {% endfor %} #}
+    {# </div> #}
+{% EndUIFieldSet %}
+{% EndUIContentBlock %}
+
 
 {% EndUIContentBlock %}
 
