--- a/templates/base/components/input/layout.html.twig
+++ b/templates/base/components/input/layout.html.twig
@@ -1,5 +1,7 @@
 {% block iboInputLabel %}
 {% endblock %}
 {% block iboInput %}
-    <input type="{{ oUIBlock.GetType() }}" id="{{ oUIBlock.GetId() }}" name="{{ oUIBlock.GetName() }}" value="{{ oUIBlock.GetValue()|raw }}">
+    <input type="{{ oUIBlock.GetType() }}" id="{{ oUIBlock.GetId() }}" name="{{ oUIBlock.GetName() }}" value="{{ oUIBlock.GetValue()|raw }}"
+           {% if oUIBlock.IsChecked() %}checked="checked"{% endif %}
+    >
 {% endblock %}
