--- a/css/backoffice/layout/blocks-integrations/_panel-with-tab-container.scss
+++ b/css/backoffice/layout/blocks-integrations/_panel-with-tab-container.scss
@@ -12,10 +12,15 @@ $ibo-panel-with-tab-container--tab-container--margin-x: -1 * $ibo-panel--body--p
 	> .ibo-panel--body {
 		> .ibo-tab-container {
 			margin-top: $ibo-panel-with-tab-container--body--padding-top;
+			height: 80vh;
 
 			> .ibo-tab-container--tabs-list{
 				margin-left: $ibo-panel-with-tab-container--tabs-list--margin-x;
 				margin-right: $ibo-panel-with-tab-container--tabs-list--margin-x;
+			}
+			> .ibo-tab-container--tab-container-list{
+				height: 100%;
+				overflow-y: auto;
 			}
 			> .ibo-tab-container--tab-container{
 				margin-left: $ibo-panel-with-tab-container--tab-container--margin-x;
