--- a/templates/base/layouts/tab-container/layout.html.twig
+++ b/templates/base/layouts/tab-container/layout.html.twig
@@ -1,6 +1,7 @@
 {# @copyright   Copyright (C) 2010-2020 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
-<div id="{{ oUIBlock.GetId() }}" class="ibo-tab-container ibo-is-{{ oUIBlock.GetLayout() }}" data-role="ibo-tab-container">
+<div id="{{ oUIBlock.GetId() }}" class="ibo-tab-container ibo-is-{{ oUIBlock.GetLayout() }}{% if oUIBlock.GetIsScrollable() %} ibo-is-scrollable{% endif %}"
+     data-role="ibo-tab-container">
     {% block iboTabContainer %}
 	    <ul class="ibo-tab-container--tabs-list" data-role="ibo-tab-container--tabs-list">
 		    {% if not aPage.isPrintable %}
@@ -42,13 +43,15 @@
 
         {% block iboTabContainerTabsContainers %}
 	        {% if not aPage.isPrintable  %}
-	            {% for oTab in oUIBlock.GetSubBlocks() %}
-                    {% if oTab.GetType() == constant('TabManager::ENUM_TAB_TYPE_HTML') %}
-	                    <div id="tab_{{ oTab.GetId()|sanitize_identifier }}" class="ibo-tab-container--tab-container">
-		                    {{ render_block(oTab, {aPage: aPage}) }}
-	                    </div>
-	                {% endif %}
-	            {% endfor %}
+				<div id="{{ oUIBlock.GetId() }}--tab-container-list" class="ibo-tab-container--tab-container-list" data-role="ibo-tab-container--tab-container-list">
+		            {% for oTab in oUIBlock.GetSubBlocks() %}
+	                    {% if oTab.GetType() == constant('TabManager::ENUM_TAB_TYPE_HTML') %}
+		                    <div id="tab_{{ oTab.GetId()|sanitize_identifier }}" class="ibo-tab-container--tab-container">
+			                    {{ render_block(oTab, {aPage: aPage}) }}
+		                    </div>
+		                {% endif %}
+		            {% endfor %}
+				</div>
 	        {% else %}
 
 		        {% for oTab in oUIBlock.GetSubBlocks() %}
