--- a/templates/base/components/form/layout.html.twig
+++ b/templates/base/components/form/layout.html.twig
@@ -5,6 +5,7 @@
         {% if oUIBlock.GetAction() %}
             action="{{ oUIBlock.GetAction() }}"
         {% endif %}
+        {% if oUIBlock.IsHidden() %}style="display: none;"{% endif %}
 >
     {% apply spaceless %}
         {% block iboContentBlockContainer %}
