--- a/templates/base/components/input/layout.html.twig
+++ b/templates/base/components/input/layout.html.twig
@@ -3,5 +3,6 @@
 {% block iboInput %}
     <input type="{{ oUIBlock.GetType() }}" id="{{ oUIBlock.GetId() }}" name="{{ oUIBlock.GetName() }}" value="{{ oUIBlock.GetValue()|raw }}"
            {% if oUIBlock.IsChecked() %}checked="checked"{% endif %}
+           {% if oUIBlock.IsHidden() %}style="display: none;"{% endif %}
     >
 {% endblock %}
