--- a/templates/base/components/datatable/layout.html.twig
+++ b/templates/base/components/datatable/layout.html.twig
@@ -12,7 +12,7 @@
     {% endif %}
 {% endif %}
 
-<table id="{{ oUIBlock.GetId() }}" width="100%" class="{{ oUIBlock.GetBlockCode() }}">
+<table id="{{ oUIBlock.GetId() }}" width="100%" class="{{ oUIBlock.GetBlockCode() }}" {% if oUIBlock.IsHidden() %}style="display: none;"{% endif %}>
     <thead>
     {% if oUIBlock.GetOption("select_mode") is not empty %}
         <th></th>
