--- a/templates/base/layouts/navigation-menu/layout.html.twig
+++ b/templates/base/layouts/navigation-menu/layout.html.twig
@@ -86,8 +86,12 @@
 		<div class="ibo-navigation-menu--menu-filter" data-role="ibo-nav-menu--menu-filter">
 			{# TODO: Retrieve input style from a component? #}
 			<input class="ibo-navigation-menu--menu-filter-input" data-role="ibo-navigation-menu--menu-filter-input" type="text" placeholder="{{ 'UI:Layout:NavigationMenu:MenuFilter:Input:Placeholder'|dict_s }}" data-tooltip-content="{{ 'UI:Layout:NavigationMenu:MenuFilter:Input:Tooltip'|dict_s }}" data-tooltip-trigger="mouseenter">
-			<a class="ibo-navigation-menu--menu-filter-clear" data-role="ibo-navigation-menu--menu-filter-clear" href="#"></a>
+			<a class="ibo-navigation-menu--menu-filter-clear" data-role="ibo-navigation-menu--menu-filter-clear" href="#"><span class="fas fa-times"></span></a>
 			<span class="ibo-navigation-menu--menu-filter-hotkey">{{ 'UI:Layout:NavigationMenu:MenuFilter:Input:Hotkey'|dict_s }}</span>
+			<div class="ibo-navigation-menu---menu-filter-hint" data-role="ibo-navigation-menu--menu-filter-hint">
+				{{ 'UI:Layout:NavigationMenu:MenuFilter:Input:Hint'|dict_s }}
+				<a class="ibo-navigation-menu--menu-filter-hint-close" data-role="ibo-navigation-menu--menu-filter-hint-close" href="#"><span class="fas fa-times"></span></a>
+			</div>
 		</div>
 		<div class="ibo-navigation-menu--menu--placeholder" data-role="ibo-navigation-menu--menu--placeholder">
 			<div class="ibo-navigation-menu--menu--placeholder-image ibo-svg-illustration--container">
